# busbar-sf-agentscript

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  package-lock.json  package.json  rustfmt.toml
.changeset/: README.md  build.mjs  config.json  eager-phones-grab.md
.githooks/: pre-commit
.github/workflows/: bench-baseline-tracker.lock.yml  bench-baseline-tracker.md  bench-regression.lock.yml  bench-regression.md  breaking-change-checker.lock.yml  breaking-change-checker.md  changesets.yml  ci-doctor.lock.yml  ci-doctor.md  ci.yml  code-simplifier.lock.yml  code-simplifier.md  docs-sync.lock.yml  docs-sync.md  issue-triage.lock.yml  issue-triage.md  parser-limitation-tracker.lock.yml  parser-limitation-tracker.md  recipe-gap-tracker.lock.yml  recipe-gap-tracker.md  release.yml  test-coverage-improver.lock.yml  test-coverage-improver.md  weekly-health-report.lock.yml  weekly-health-report.md
benches/: parse_recipes.rs
crates/graph/: Cargo.toml
crates/graph/src/: builder.rs  dependencies.rs  edges.rs  error.rs  export.rs  lib.rs  nodes.rs  queries.rs  validation.rs  wasm.rs
crates/graph/src/render/: ascii.rs  graphml.rs  mod.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: main.rs  semantic_tokens.rs
crates/parser/: Cargo.toml
crates/parser/benches/: parse_recipes.rs
crates/parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  serializer.rs  validation.rs  wasm.rs
crates/parser/src/parser/: actions.rs  connections.rs  instructions.rs  language.rs  mod.rs  reasoning.rs  tests.rs  topics.rs  variables.rs
crates/parser/tests/: integration_test.rs  test_reasoning_minimal.rs
docs/: index.html  plugin.html
examples/: ComprehensiveDemo-ast.json  ComprehensiveDemo.agent
pkg/: .gitignore  CHANGELOG.md  package.json
plugin-agency/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE_EXAMPLES.md  debug.html  esbuild.config.mjs  oclif.manifest.json  package-lock.json  package.json  simple.html  test-recipes.html  tsconfig.json  vitest.config.ts
plugin-agency/messages/: agency.actions.md  agency.agents.list.md  agency.agents.select.md  agency.deps.md  agency.graph.md  agency.impact.md  agency.list.md  agency.parse.md  agency.paths.md  agency.query.md  agency.tui.md  agency.validate.md  agency.validate.platform.md  agency.version.md
plugin-agency/src/: index.ts  theme.ts  wasm-loader.ts
plugin-agency/src/commands/agency/: actions.ts  deps.ts  graph.ts  impact.ts  list.ts  parse.ts  paths.ts  query.ts  tui.ts  validate.ts  version.ts
plugin-agency/src/commands/agency/agents/: list.ts  select.ts
plugin-agency/src/commands/agency/validate/: platform.ts
plugin-agency/src/components/: App.tsx  DepsView.tsx  FilePicker.tsx  GraphView.tsx  Header.tsx  MainPanel.tsx  OverviewView.tsx  PathsView.tsx  StatusBar.tsx  TopicsView.tsx  ValidationView.tsx
plugin-agency/test/commands/agency/: actions.test.ts  deps.test.ts  graph.test.ts  impact.test.ts  list.test.ts  parse.test.ts  paths.test.ts  query.test.ts  tui.test.ts  validate.test.ts  version.test.ts
plugin-agency/test/commands/agency/agents/: agents.test.ts
plugin-agency/test/commands/agency/fixtures/: minimal.agent  rich.agent  simple.agent
plugin-agency/test/commands/agency/fixtures/agents-dir/: agent-a.agent  agent-b.agent
plugin-agency/test/helpers/: global-setup.ts  setup.ts  wasm-init.ts
scripts/: bump-version.mjs
src/: ast.rs  error.rs  lexer.rs  lib.rs  serializer.rs
src/graph/: builder.rs  dependencies.rs  error.rs  export.rs  mod.rs  queries.rs  validation.rs  wasm.rs
src/graph/render/: ascii.rs  graphml.rs  mod.rs
src/parser/: actions.rs  config.rs  connections.rs  directives.rs  expressions.rs  instructions.rs  mod.rs  primitives.rs  reasoning.rs  system.rs  tests.rs  topics.rs
tests/: integration_test.rs  test_parser_errors.rs  test_reasoning_minimal.rs  test_serializer_roundtrip.rs  test_validation.rs
tests/e2e/: README.md  editor.spec.ts  plugin.spec.ts
tree-sitter-agentscript/: binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-agentscript/queries/: folds.scm  locals.scm
tree-sitter-agentscript/src/: parser.c  scanner.c
tree-sitter-agentscript/test/corpus/: config.txt  expressions.txt  instructions.txt  topics.txt
zed-extension/: Cargo.toml  README.md  extension.toml
zed-extension/grammars/agentscript/: package-lock.json  package.json  test.agent
zed-extension/grammars/agentscript/bindings/node/: binding.cc
zed-extension/grammars/agentscript/src/: grammar.json  node-types.json
zed-extension/grammars/agentscript/test/corpus/: variables.txt
zed-extension/languages/agentscript/: config.toml  highlights.scm  outline.scm
zed-extension/src/: lib.rs
