[workspace]
resolver = "2"
members = [
    "crates/lsp",
]

[package]
name = "busbar-sf-agentscript"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AgentScript parser, graph analysis, and LSP for Salesforce Agentforce"
readme = "README.md"
keywords = ["salesforce", "agentscript", "agentforce", "parser", "graph"]
categories = ["parser-implementations", "development-tools"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
graph = ["dep:petgraph", "dep:ascii-dag"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Parser
chumsky   = { workspace = true }
ariadne   = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
indexmap  = { workspace = true }
thiserror = { workspace = true }

# Graph (optional)
petgraph  = { workspace = true, optional = true }
ascii-dag = { version = "0.2", optional = true }

# WASM (optional)
wasm-bindgen           = { version = "0.2", optional = true }
serde-wasm-bindgen     = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
glob = "0.3"

[[bench]]
name = "parse_recipes"
harness = false

[[test]]
name = "integration"
path = "tests/integration_test.rs"

[[test]]
name = "test_reasoning_minimal"
path = "tests/test_reasoning_minimal.rs"

[[test]]
name = "test_serializer_roundtrip"
path = "tests/test_serializer_roundtrip.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto           = true
codegen-units = 1

# ─── Workspace-wide metadata ──────────────────────────────────────────────────

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/composable-delivery/busbar-sf-agentscript"
rust-version = "1.88"

[workspace.dependencies]
# Internal crates
busbar-sf-agentscript     = { version = "0.0.1", path = "." }
busbar-sf-agentscript-lsp = { version = "0.0.1", path = "crates/lsp" }

# Serialization
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
indexmap    = { version = "2.0", features = ["serde"] }
thiserror   = "2.0"

# Parser
chumsky = { version = "0.12.0", features = ["pratt"] }
ariadne = "0.4"

# Graph
petgraph  = "0.6"

# Pretty-print diffs (tests)
pretty_assertions = "1.4"
