[package]
name = "busbar-sf-agentscript-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Graph analysis and validation for AgentScript ASTs"
keywords = ["salesforce", "agentscript", "agentforce", "graph", "validation"]
categories = ["development-tools", "data-structures"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook"]

[dependencies]
busbar-sf-agentscript-parser = { workspace = true }
petgraph   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
ascii-dag  = "0.2"

wasm-bindgen           = { version = "0.2", optional = true }
serde-wasm-bindgen     = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
