[package]
name = "busbar-sf-agentscript-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Language Server Protocol server for Salesforce AgentScript"
keywords = ["salesforce", "agentscript", "agentforce", "lsp", "language-server"]
categories = ["development-tools"]
publish = false

[[bin]]
name = "busbar-sf-agentscript-lsp"
path = "src/main.rs"

[dependencies]
busbar-sf-agentscript = { workspace = true, features = ["graph"] }

tower-lsp    = "0.20"
tokio        = { version = "1.0", features = ["full"] }
serde        = { workspace = true }
serde_json   = { workspace = true }
async-trait  = "0.1"
log          = "0.4"
env_logger   = "0.10"
lazy_static  = "1.4"
