[package]
name = "busbar-sf-agentscript-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Salesforce AgentScript parser — lexer, AST, serializer, and validator"
keywords = ["salesforce", "agentscript", "agentforce", "parser", "ast"]
categories = ["parser-implementations", "development-tools"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook"]

[dependencies]
chumsky   = { workspace = true }
ariadne   = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
indexmap  = { workspace = true }
thiserror = { workspace = true }

wasm-bindgen           = { version = "0.2", optional = true }
serde-wasm-bindgen     = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
glob = "0.3"

[[bench]]
name = "parse_recipes"
harness = false

[[test]]
name = "integration"
path = "tests/integration_test.rs"

[[test]]
name = "test_reasoning_minimal"
path = "tests/test_reasoning_minimal.rs"

[[test]]
name = "test_serializer_roundtrip"
path = "tests/test_serializer_roundtrip.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
